fix size and alignment of monospaced text
- increase font size of code to 0.9375em
- set line height of pre to 1.25rem (14px/20px)
- reset font size of code inside pre
- only set line-height on code in toc
- add sample text to preview site

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -112,12 +112,11 @@ code,
 kbd,
 pre {
   font-family: "Roboto Mono", monospace;
-  font-size: 0.875rem;
 }
 
 code {
   color: var(--color-brand-black);
-  line-height: 1;
+  font-size: 0.9375em;
   word-spacing: -0.125em;
 }
 
